views: use platform spacebar behavior in PageActionIconView

On Mac, the spacebar activates buttons on keydown; on other platforms it
activates them on keyup. Not implementing this behavior here caused the
following bug:

1) User focuses the bookmark bar star
2) User hits space to activate it, which opens the bubble
3) User tabs to the "Remove" button
4) User hits space to activate that button
5) The "Remove" button activates on keydown and the bubble dismisses
6) The star gets keyboard focus again
7) The star immediately handles the keyup and reopens the bubble!

The fix is for PageActionIconView to honor the platform spacebar affinity. There
is an old TODO in this code to merge it with views::Button but I would not want
to merge such a change back to beta so this small fix seems more expedient.

Bug: 712341
Change-Id: If932928bb069493e61f78f2d34e95a0aa45fb504
Reviewed-on: https://chromium-review.googlesource.com/1230437
Reviewed-by: Leonard Grey <lgrey@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592379}
Former-commit-id: 5540a9cb7ec95a28dcfb97f9ce92520799a71647